# IG_T1

./: CMakeLists.txt  README.md
IG_T1/: main.cpp
IG_T2/: CMakeLists.txt  main.cpp
IG_T3/: CMakeLists.txt  main.cpp
bibliotecas/: CMakeLists.txt  Lab_RGB.h  Renderer.h  ToneMapping.h  camara.h  color.h  esfera.h  figuras.h  globals.h  kdTree.h  kdTree_smallPM.h  main.cpp  materialProperties.h  matrix.h  monteCarlo.h  path_tracer.h  perlinNoise.h  phong.h  photon.h  photonMap.h  photonMapper.h  plano.h  ply_reader.h  ppm_reader.h  prueba  punto&direccion.h  punto_direccion.h  russian_roulette.h  scenes.h  textures.h  tranformations.h  triangulo.h
blender_scripts/: texture_to_vertex.py
documentacion/: resumen
imagenes/: 01.ppm  IF NOT OK.ppm  test.ppm
models/: Sputnik3.ply  fan.ply  fan_2.ply  human.ply  low_poly_tree.ply  macaco.ply  macaco_normal.ply  marco.ply  test.ply  vertex_color_test.ply  vertex_normal.ply
models/lowPolySputnik/: Sputnik3.blend
models/lowPolyTree/: Sketchfab_2017_09_01_21_37_34.blend  Sketchfab_2017_09_01_21_37_34.blend1
toneMapping/: ToneMapping.h  main.cpp  test  test-LDR.ppm
